# serializer version: 1
# name: test_given_no_release_channels_when_list_release_channels_then_success
  '''
  No release channels found.
  
  '''
# ---
# name: test_given_release_channel_with_missing_info_when_list_release_channels_then_success
  '''
  channel1
    Description: 
    Versions: ()
    Created on: 
    Updated on: 
    Target accounts: ALL ACCOUNTS
  
  '''
# ---
# name: test_given_release_channel_with_no_target_account_then_show_all_accounts_in_snapshot
  '''
  channel1
    Description: desc
    Versions: (v1, v2)
    Created on: 2024-12-03 00:00:00.000000 
    Updated on: 2024-12-05 00:00:00.000000 
    Target accounts: ALL ACCOUNTS
  
  '''
# ---
# name: test_given_release_channels_with_a_selected_channel_to_filter_when_list_release_channels_then_returned_selected_channel
  '''
  chAnnEl1
    Description: desc
    Versions: (v1, v2)
    Created on: 2024-12-03 00:00:00.000000 
    Updated on: 2024-12-05 00:00:00.000000 
    Target accounts: (org1.acc1, org2.acc2)
  
  '''
# ---
# name: test_given_release_channels_with_proper_values_when_list_release_channels_then_success
  '''
  channel1
    Description: desc
    Versions: (v1, v2)
    Created on: 2024-12-03 00:00:00.000000 
    Updated on: 2024-12-05 00:00:00.000000 
    Target accounts: (org1.acc1, org2.acc2)
  channel2
    Description: desc2
    Versions: (v3)
    Created on: 2024-12-03 00:00:00.000000 
    Updated on: 2024-12-05 00:00:00.000000 
    Target accounts: (org3.acc3)
  
  '''
# ---
